adds spring support for docker compose
